fixed top elements alignment

--- a/projects/resume/resume.css
+++ b/projects/resume/resume.css
@@ -115,6 +115,7 @@ body {
 	padding: 0px;
 	font-size: 12px;
 	border-color: transparent;
+	margin-bottom: 29px;
 }
 .icon_container {}
 #profile_pic {
